modules/gdscript/tests/scripts/analyzer/errors/nullable_method_return.gd
func test():
    print(_get_result())


func _get_result() -> String:
    var might_be_null: String? = null
    return might_be_null
